# snowflake-signup-automation

./: .gitignore  README.md  config.py  pyproject.toml  setup-with-uv.sh  snowflake_config.json.example  snowflake_signup.py  snowflake_signup_cli.py  test_data.json
snowflake_util/: __init__.py  batch.py  demo.py  generator.py
tests/: __init__.py  test_generator.py
