[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snowflake-signup"
version = "0.1.0"
description = "Automation tool for Snowflake signup process using Playwright"
authors = [
    {name = "Enri Peters", email = "enri@ityou.tech"}
]
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
dependencies = [
    "playwright>=1.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[project.scripts]
snowflake-signup = "snowflake_signup_cli:cli_main"
generate-test-data = "snowflake_util.generator:main"
batch-signup = "snowflake_util.batch:main"

[tool.pytest]
testpaths = ["tests"]

[tool.hatch.build]
packages = ["snowflake_signup*.py", "snowflake_util"]
